Fixed not showing random user when refresh

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -61,7 +61,6 @@ img {
 .city,
 .email {
   color: #9e9999;
-  margin-top: 0px;
   font-size: 15px;
 }
 .thumbnail {
@@ -116,7 +115,7 @@ img {
   text-align: center;
 }
 .close {
-  font-size: 32px;
+  font-size: 26px;
   position: absolute;
   top:2%;
   right:3%;
@@ -131,17 +130,21 @@ img {
   img {
     width: 72px;
   }
+
   .name {
     font-size: 19px;
   }
+
   .city,
   .email {
     font-size: 13px;
   }
+
   #searchField {
     width: 30%;
     margin-left: 35%;
   }
+
   .employee {
     width: 40%;
     margin-left: 6.5%;
@@ -149,12 +152,15 @@ img {
     border-radius: 5px;
     padding: 15px;
   }
+
   .active {
     width: 40%;
     right: 30%;
   }
+
   .close {
     font-size: 20px;
+  }
 }
 
 @media screen and (min-width: 1056px) {
